--- a/src/app/pages/auth/gestion-users/gestion-users.component.html
+++ b/src/app/pages/auth/gestion-users/gestion-users.component.html
@@ -42,19 +42,20 @@
             <button type="button" (click)="onOpenDialog($event)" [disabled]="tailleSelect>0"
                     class="btn btn-sm btn-outline-primary"><span class="fas fa-plus "></span> Ajouter
             </button>
-            <button type="button" [disabled]="tailleSelect>1 || tailleSelect === 0 "
+            <button type="button" (click)="onOpenDialogRegions()"
+                    [disabled]="tailleSelect>1 || tailleSelect === 0 "
                     class="btn btn-sm btn-outline-primary ml-4"><span class="fas fa-building "></span> Affecter des
               Regions
             </button>
-            <button type="button" (click)="onOpenDialogProfils($event)"
+            <button type="button" (click)="onOpenDialogProfils()"
                     [disabled]="tailleSelect>1 || tailleSelect === 0 " class="btn btn-sm btn-outline-primary ml-4"><span
               class="fas fa-pencil-alt "></span> Modifier Profils
             </button>
-            <button type="button" [disabled]="btnValidation || tailleSelect === 0 "
+            <button type="button" (click)="onActived()" [disabled]="btnValidation || tailleSelect === 0 "
                     class="btn btn-sm btn-outline-primary ml-4"><span class="fas fa-user-lock "></span>
               Activer/Desactiver ({{tailleSelect}})
             </button>
-            <button hidden type="button" class="btn btn-sm btn-outline-danger ml-4"><span class="fas fa- "></span>
+            <button  hidden type="button" class="btn btn-sm btn-outline-danger ml-4"><span class="fas fa- "></span>
               Supprimer({{tailleSelect}})
             </button>
           </div>
@@ -81,9 +82,9 @@
                 <e-column type="checkbox" width="33" textAlign='Left'></e-column>
                 <e-column field='id' headerText='Code' textAlign='Left' width=100></e-column>
                 <e-column field='username' headerText='Matricule' textAlign='Left' width=100></e-column>
-                <e-column field='actived' headerText='Status' width='150'>
+                <e-column field='isActive' headerText='Status' width='150'>
                   <ng-template #template let-data>
-                    <div *ngIf="data.actived === true;else login" class="statustemp e-activecolor">
+                    <div *ngIf="data.isActive === true;else login" class="statustemp e-activecolor">
                       <span class="statustxt e-activecolor">  <span class="fas fa-check"></span> Actif</span>
                     </div>
                     <ng-template #login>
@@ -101,6 +102,7 @@
           <div class="col-md-1"></div>
         </div>
         <div #container class='root-container'></div>
+<!--        //ajout user-->
         <ejs-dialog (beforeOpen)="validation($event)" class="mt-3" id='dialog' isModal='true' [position]='position'
                     #ejDialog header='Ajout utilisateur'
                     showCloseIcon='true'
@@ -156,7 +158,7 @@
                       <div class="col-8">
                         <ng-select
                           placeholder="REGIONS"
-                          formControlName="regions"
+                          formControlName="regionIds"
                           appendTo="html"
                           [dropdownPosition]="'bottom'"
                           [multiple]="true"
@@ -187,40 +189,41 @@
             </div>
           </ng-template>
         </ejs-dialog>
-        <ejs-dialog (beforeOpen)="validation($event)" class="mt-3" id='dialog2' isModal='true' [position]='position2'
-                    #ejDialog2 header='Affectation des etablissements'
+
+<!--        //regions-->
+        <ejs-dialog (beforeOpen)="validation($event)" class="mt-3" id='dialog4' isModal='true' [position]='position3'
+                    #ejDialog4 header="Modification des regions d'un utilisateur"
                     showCloseIcon='true'
-                    [target]='targetElement2' width='700px'>
+                    [target]='targetElement' width='560px'>
           <ng-template #content>
             <div class="dialogContent">
-              <form [formGroup]="validerFormAjoutMin">
+              <form [formGroup]="validerFormRegion" (ngSubmit)="validerModiRegions()">
                 <div class="input-group mb-3">
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <ng-select
-                      bindLabel="roles"
-                      placeholder="Selectionnez les Ministeres"
-                      formControlName="cd_ministere"
-                      appendTo="body"
+                      placeholder="REGIONS"
+                      appendTo="html"
                       [dropdownPosition]="'bottom'"
-                      [(ngModel)]="selectedMin"
                       [multiple]="true"
+                      [(ngModel)]="selectedrecordsRegion"
                       [closeOnSelect]="false"
                       [hideSelected]="true"
                       [searchable]="true"
                       [clearable]="true"
+                      formControlName="ids"
                     >
-                      <ng-option class="mt-5" *ngFor="let els of tabRefMinisteres ;let j = index"
-                                 value="{{els.cd_ministere}}">
-                        {{els.cd_ministere}} -- {{els.descrReduit}}
+                      <ng-option *ngFor="let role of tabRoles ;let j = index" value="{{role.id}}">
+                        {{role.id}} -- {{role.name}}
                       </ng-option>
                     </ng-select>
                   </div>
-                  <div class="col-sm-2 ">
-                    <button [hidden]="tailleSelectMinisteres>0" [disabled]="validerFormAjoutMin.invalid" type="submit"
+                  <div class="col-sm-3 ">
+                    <button [hidden]="tailleSelectRegion>0" [disabled]="validerFormRegion.invalid" type="submit"
                             class="btn btn-sm btn-primary btn-block">Valider
                     </button>
-                    <button [hidden]="tailleSelectMinisteres===0" [disabled]="btnSupprimer" type="button"
-                            class=" btn btn-sm btn-danger btn-block">supprimer({{tailleSelectMinisteres}})
+                    <button (click)="deleteRegions()"  [hidden]="tailleSelectRegion===0"
+                             type="button"
+                            class=" btn btn-sm btn-danger btn-block">supprimer({{tailleSelectRegion}})
                     </button>
                   </div>
                 </div>
@@ -229,21 +232,20 @@
               <div class="input-group mb-3">
                 <div class="col-sm-12">
                   <ejs-grid
-                    #grid2
-                    [dataSource]='tabMinisteres'
+                    #grid4
+                    [dataSource]='tabRegions'
                     [allowSelection]="true"
+                    [allowSorting]="true"
                     [selectionSettings]='selectionOptions'
-                    [groupSettings]="groupOptions"
-                    (rowSelected)='rowSelectedMinistere($event)'
-                    (rowDeselected)="rowDeSelectedMinistere($event)"
-                    id="gridcompMinisteres"
+                    (rowSelected)='rowSelectedRegions($event)'
+                    (rowDeselected)="rowDeSelectedRegions($event)"
                     allowPaging='true' height=250
                     gridLines="Both"
                   >
                     <e-columns>
                       <e-column type="checkbox" width="33" textAlign='Left'></e-column>
-                      <e-column field='cd_ministere' headerText='Code' textAlign='Left' width=50></e-column>
-                      <e-column field='descrReduit' headerText='Description' textAlign='Left' width=200></e-column>
+                      <e-column field='id' headerText='Code' textAlign='Left' width=60></e-column>
+                      <e-column field='name' headerText='Region' textAlign='Left' width=150></e-column>
 
                     </e-columns>
 
@@ -255,20 +257,21 @@
             </div>
           </ng-template>
         </ejs-dialog>
+
+<!--        //rolesProfils-->
         <ejs-dialog (beforeOpen)="validation($event)" class="mt-3" id='dialog3' isModal='true' [position]='position3'
-                    #ejDialog3 header="Modification des Profils d'un utilisateur"
+                    #ejDialog3 header="Modification Profils d'un utilisateur"
                     showCloseIcon='true'
                     [target]='targetElement' width='560px'>
           <ng-template #content>
             <div class="dialogContent">
-              <form [formGroup]="validerFormProfil">
+              <form [formGroup]="validerFormProfil" (ngSubmit)="validerModifProfil()">
                 <div class="input-group mb-3">
                   <div class="col-sm-9">
                     <ng-select
-                      bindLabel="roles"
                       placeholder="Selectionnez les Profils"
                       formControlName="roleName"
-                      appendTo="body"
+                      appendTo="html"
                       [dropdownPosition]="'bottom'"
                       [(ngModel)]="selectedProfils"
                       [multiple]="true"
@@ -277,8 +280,8 @@
                       [searchable]="true"
                       [clearable]="true"
                     >
-                      <ng-option *ngFor="let role of tabRoles2 ;let j = index" value="{{role.roleName}}">
-                        {{role.id}} -- {{role.roleName}}
+                      <ng-option *ngFor="let role of dropDownRoles ;let j = index" value="{{(role.id)}}">
+                        {{role.id}} -- {{role.name}}
                       </ng-option>
                     </ng-select>
                   </div>
@@ -286,7 +289,8 @@
                     <button [hidden]="tailleSelectProfils>0" [disabled]="validerFormProfil.invalid" type="submit"
                             class="btn btn-sm btn-primary btn-block">Valider
                     </button>
-                    <button [hidden]="tailleSelectProfils===0" [disabled]="btnSupprimerProfil" type="button"
+                    <button (click)="deleteRolesInProfil()" [hidden]="tailleSelectProfils === 0"
+                             type="button"
                             class=" btn btn-sm btn-danger btn-block">supprimer({{tailleSelectProfils}})
                     </button>
                   </div>
@@ -299,8 +303,6 @@
                     #grid3
                     [dataSource]='tabProfils'
                     [allowSelection]="true"
-                    [selectionSettings]='selectionOptions'
-                    [groupSettings]="groupOptions"
                     (rowSelected)='rowSelectedProfils($event)'
                     (rowDeselected)="rowDeSelectedProfils($event)"
                     id="gridcompProfils"
@@ -310,8 +312,7 @@
                     <e-columns>
                       <e-column type="checkbox" width="33" textAlign='Left'></e-column>
                       <e-column field='id' headerText='Code' textAlign='Left' width=60></e-column>
-                      <e-column field='roleName' headerText='Role' textAlign='Left' width=150></e-column>
-                      <e-column field='description' headerText='Description' textAlign='Left' width=200></e-column>
+                      <e-column field='name' headerText='Role' textAlign='Left' width=150></e-column>
 
                     </e-columns>
 
