repartion de stock

--- a/src/app/pages/gestion de stock/repartition-de-stock/repartition-de-stock.component.html
+++ b/src/app/pages/gestion de stock/repartition-de-stock/repartition-de-stock.component.html
@@ -8,6 +8,20 @@
         <div class="col-sm-5">
           <h5 class="m-0 text-dark">Reparatition des subventions </h5>
         </div>
+        <div style="margin-left: -3%" class="col-3  ml-4 mt-auto">
+<!--          <form [formGroup]="validerFormCampagne">-->
+<!--            <select-->
+<!--              (change)="checkRegionAndCamp()"-->
+<!--              formControlName="idCampaign"-->
+<!--              class="form-control form-control-sm">-->
+<!--              <option selected disabled value=""> &#45;&#45; selectionner une campagne &#45;&#45;-->
+<!--              </option>-->
+<!--              <option *ngFor="let ca of campagnes" value="{{ca.id}}">-->
+<!--                {{ca.code}}-->
+<!--              </option>-->
+<!--            </select>-->
+<!--          </form>-->
+        </div>
         <div style="margin-left: -3%" class="col-3 ml-4 mt-auto">
           <form [formGroup]="validerFormregion">
             <select
@@ -24,20 +38,7 @@
 
           </form>
         </div>
-        <div style="margin-left: -3%" class="col-3  ml-4 mt-auto">
-          <form [formGroup]="validerFormCampagne">
-            <select
-              (change)="checkRegionAndCamp()"
-              formControlName="idCampaign"
-              class="form-control form-control-sm">
-              <option selected disabled value=""> -- selectionner une campagne --
-              </option>
-              <option *ngFor="let ca of campagnes" value="{{ca.id}}">
-                {{ca.code}}
-              </option>
-            </select>
-          </form>
-        </div>
+
 
       </div>
       <hr>
@@ -145,10 +146,11 @@
               </div>
               <br>
               <div class="row">
+
                 <div class="col-sm-12">
                   <p class="text-center font-weight-bold" *ngIf="keyIntrant!=undefined">Liste des Agriculteurs de
-                    l'intrant : {{keyIntrant.name}} </p>
-                  <ejs-grid #detailgridChild id="detailgridChild" [allowSelection]='false' [dataSource]='data'>
+                    l'intrant : {{keyIntrant.name}} -------------- {{keyIntrant.id===undefined | json}}</p>
+                  <ejs-grid  #detailgridChild id="detailgridChild" [allowSelection]='false' [dataSource]='data'>
                     <e-columns>
                       <e-column field='farmerFirstName' headerText='farmerFirstName' width='150'></e-column>
                       <e-column field='farmerLastName' headerText='farmerLastName' width='100'></e-column>
@@ -169,17 +171,21 @@
                       </e-column>
                     </e-columns>
 
-                    <e-aggregates>
+                    <e-aggregates >
                       <e-aggregate>
-                        <e-columns>
+                        <e-columns >
                           <e-column field="acreage" type="sum">
                             <ng-template #footerTemplate let-data>{{data.sum.toLocaleString()}}</ng-template>
                           </e-column>
-                          <e-column field="quantity" type="max">
-                            <ng-template #footerTemplate let-data>{{keyIntrant.consoQuantityByIntrant.toLocaleString()}}</ng-template>
+                          <e-column  field="quantity" type="max">
+                            <ng-template  #footerTemplate let-data>
+                              <div *ngIf="keyIntrant!=undefined && keyIntrant.consoQuantityByIntrant!=undefined">{{keyIntrant.consoQuantityByIntrant.toLocaleString()}}</div>
+                              </ng-template>
                           </e-column>
                           <e-column field="totalCamp" type="max">
-                            <ng-template #footerTemplate let-data>{{keyIntrant.prixTot.toLocaleString()}}</ng-template>
+                            <ng-template #footerTemplate let-data>
+                              <div *ngIf="keyIntrant!=undefined  && keyIntrant.prixTot!=undefined">{{keyIntrant.prixTot.toLocaleString()}}</div>
+                              </ng-template>
                           </e-column>
                         </e-columns>
                       </e-aggregate>
