--- a/src/app/pages/auth/gestion-users/gestion-users.component.html
+++ b/src/app/pages/auth/gestion-users/gestion-users.component.html
@@ -40,23 +40,22 @@
           <div class="col-md-3"></div>
           <div class="col-md-8">
             <button type="button" (click)="onOpenDialog($event)" [disabled]="tailleSelect>0"
-                    class="btn btn-sm btn-outline-primary"><span class="fas fa-plus "></span> Ajouter
+                    class="btn btn-sm btn-outline-primary"><span class="fas fa-plus "></span>{{'global.ajouter' | translate}}
             </button>
             <button type="button" (click)="onOpenDialogRegions()"
                     [disabled]="tailleSelect>1 || tailleSelect === 0 "
-                    class="btn btn-sm btn-outline-primary ml-4"><span class="fas fa-building "></span> Affecter des
-              Regions
+                    class="btn btn-sm btn-outline-primary ml-4"><span class="fas fa-building "></span>{{'global.affect_region' | translate}}
             </button>
             <button type="button" (click)="onOpenDialogProfils()"
                     [disabled]="tailleSelect>1 || tailleSelect === 0 " class="btn btn-sm btn-outline-primary ml-4"><span
-              class="fas fa-pencil-alt "></span> Modifier Profils
+              class="fas fa-pencil-alt "></span>{{'global.modifier_profil' | translate}}
             </button>
             <button type="button" (click)="onActived()" [disabled]="btnValidation || tailleSelect === 0 "
                     class="btn btn-sm btn-outline-primary ml-4"><span class="fas fa-user-lock "></span>
-              Activer/Desactiver ({{tailleSelect}})
+              {{'global.activer/desactiver' | translate}} ({{tailleSelect}})
             </button>
             <button  hidden type="button" class="btn btn-sm btn-outline-danger ml-4"><span class="fas fa- "></span>
-              Supprimer({{tailleSelect}})
+              {{'global.supprimer' | translate}}({{tailleSelect}})
             </button>
           </div>
           <div class="col-md-1"></div>
@@ -80,16 +79,16 @@
             >
               <e-columns>
                 <e-column type="checkbox" width="33" textAlign='Left'></e-column>
-                <e-column field='id' headerText='Code' textAlign='Left' width=100></e-column>
-                <e-column field='username' headerText='Matricule' textAlign='Left' width=100></e-column>
-                <e-column field='isActive' headerText='Status' width='150'>
+                <e-column field='id' headerText="{{'gestion_utilisateur.code' | translate}}" textAlign='Left' width=100></e-column>
+                <e-column field='username' headerText="{{'gestion_utilisateur.matricule' | translate}}" textAlign='Left' width=100></e-column>
+                <e-column field='isActive' headerText="{{'gestion_utilisateur.status' | translate}}" width='150'>
                   <ng-template #template let-data>
                     <div *ngIf="data.isActive === true;else login" class="statustemp e-activecolor">
-                      <span class="statustxt e-activecolor">  <span class="fas fa-check"></span> Actif</span>
+                      <span class="statustxt e-activecolor">  <span class="fas fa-check"></span>{{'gestion_utilisateur.actif' | translate}}</span>
                     </div>
                     <ng-template #login>
                       <div class="statustemp e-inactivecolor">
-                        <span class="statustxt e-inactivecolor"><span class="fas fa-times"></span> Inactif</span>
+                        <span class="statustxt e-inactivecolor"><span class="fas fa-times"></span>{{'gestion_utilisateur.inactif' | translate}}</span>
                       </div>
                     </ng-template>
                   </ng-template>
@@ -114,16 +113,16 @@
                 <div class="table-responsive ">
                   <div class="container text-center">
                     <div class="row g-2 mt-2">
-                      <div class="col"><span> Nom d'utilisateur </span></div>
+                      <div class="col"><span>{{'gestion_utilisateur.nom_utilisateur' | translate}}</span></div>
                       <div class="col-8">
                         <input formControlName="username" type="text"
                                class="form-control form-control-xs form-control-sm"
-                               placeholder="Matricule">
+                               placeholder="{{'gestion_utilisateur.nom_utilisateur' | translate}">
 
                       </div>
                     </div>
                     <div class="row g-2 mt-2">
-                      <div class="col"><span> Mot de passe </span></div>
+                      <div class="col"><span>{{'gestion_utilisateur.mot_de_passe' | translate}}</span></div>
                       <div class="col-8">
                         <input formControlName="password" type="password"
                                class="form-control form-control-xs form-control-sm"
@@ -133,7 +132,7 @@
                     </div>
 
                     <div class="row g-2 mt-2">
-                      <div class="col"><span> Liste des Roles </span></div>
+                      <div class="col"><span>{{'gestion_utilisateur.liste_role' | translate}}</span></div>
                       <div class="col-8">
                         <ng-select
                           placeholder="Roles"
@@ -154,7 +153,7 @@
                       </div>
                     </div>
                     <div class="row g-2 mt-2">
-                      <div class="col"><span> Liste des Regions </span></div>
+                      <div class="col"><span>{{'gestion_utilisateur.liste_region' | translate}}</span></div>
                       <div class="col-8">
                         <ng-select
                           placeholder="REGIONS"
@@ -177,7 +176,7 @@
                       <div class="col"></div>
                       <div class="col-8">
                         <button [disabled]="validerFormAjout.invalid " type="submit"
-                                class="btn btn-sm btn-primary btn-block">Valider
+                                class="btn btn-sm btn-primary btn-block">{{ 'global.valider'| translate}}
                         </button>
                       </div>
                     </div>
@@ -192,7 +191,7 @@
 
 <!--        //regions-->
         <ejs-dialog (beforeOpen)="validation($event)" class="mt-3" id='dialog4' isModal='true' [position]='position3'
-                    #ejDialog4 header="Modification des regions d'un utilisateur"
+                    #ejDialog4 header="{{'gestion_utilisateur.modif_region'| translate}}"
                     showCloseIcon='true'
                     [target]='targetElement' width='560px'>
           <ng-template #content>
@@ -201,7 +200,7 @@
                 <div class="input-group mb-3">
                   <div class="col-sm-9">
                     <ng-select
-                      placeholder="REGIONS"
+                      placeholder="{{'gestion_utilisateur.region'| translate}}"
                       appendTo="html"
                       [dropdownPosition]="'bottom'"
                       [multiple]="true"
@@ -219,11 +218,11 @@
                   </div>
                   <div class="col-sm-3 ">
                     <button [hidden]="tailleSelectRegion>0" [disabled]="validerFormRegion.invalid" type="submit"
-                            class="btn btn-sm btn-primary btn-block">Valider
+                            class="btn btn-sm btn-primary btn-block">{{'global.valider'| translate}}
                     </button>
                     <button (click)="deleteRegions()"  [hidden]="tailleSelectRegion===0"
                              type="button"
-                            class=" btn btn-sm btn-danger btn-block">supprimer({{tailleSelectRegion}})
+                            class=" btn btn-sm btn-danger btn-block">{{'global.supprimer'| translate}}({{tailleSelectRegion}})
                     </button>
                   </div>
                 </div>
@@ -244,8 +243,8 @@
                   >
                     <e-columns>
                       <e-column type="checkbox" width="33" textAlign='Left'></e-column>
-                      <e-column field='id' headerText='Code' textAlign='Left' width=60></e-column>
-                      <e-column field='name' headerText='Region' textAlign='Left' width=150></e-column>
+                      <e-column field='id' headerText="{{ 'gestion_utilisateur.code'|translate}}" textAlign='Left' width=60></e-column>
+                      <e-column field='name' headerText="{{ 'gestion_utilisateur.region_'|translate}}" textAlign='Left' width=150></e-column>
 
                     </e-columns>
 
@@ -260,7 +259,7 @@
 
 <!--        //rolesProfils-->
         <ejs-dialog (beforeOpen)="validation($event)" class="mt-3" id='dialog3' isModal='true' [position]='position3'
-                    #ejDialog3 header="Modification Profils d'un utilisateur"
+                    #ejDialog3 header="{{'gestion_utilisateur.header1'|translate}}"
                     showCloseIcon='true'
                     [target]='targetElement' width='560px'>
           <ng-template #content>
@@ -269,7 +268,7 @@
                 <div class="input-group mb-3">
                   <div class="col-sm-9">
                     <ng-select
-                      placeholder="Selectionnez les Profils"
+                      placeholder="{{'gestion_utilisateur.select_profil'|translate}}"
                       formControlName="roleName"
                       appendTo="html"
                       [dropdownPosition]="'bottom'"
@@ -287,11 +286,11 @@
                   </div>
                   <div class="col-sm-3 ">
                     <button [hidden]="tailleSelectProfils>0" [disabled]="validerFormProfil.invalid" type="submit"
-                            class="btn btn-sm btn-primary btn-block">Valider
+                            class="btn btn-sm btn-primary btn-block">{{'global.valider'|translate}}
                     </button>
                     <button (click)="deleteRolesInProfil()" [hidden]="tailleSelectProfils === 0"
                              type="button"
-                            class=" btn btn-sm btn-danger btn-block">supprimer({{tailleSelectProfils}})
+                            class=" btn btn-sm btn-danger btn-block">{{'global.supprimer'|translate}}({{tailleSelectProfils}})
                     </button>
                   </div>
                 </div>
@@ -311,8 +310,8 @@
                   >
                     <e-columns>
                       <e-column type="checkbox" width="33" textAlign='Left'></e-column>
-                      <e-column field='id' headerText='Code' textAlign='Left' width=60></e-column>
-                      <e-column field='name' headerText='Role' textAlign='Left' width=150></e-column>
+                      <e-column field='id' headerText="{{'gestion_utilisateur.Code'}}" textAlign='Left' width=60></e-column>
+                      <e-column field='name' headerText="{{'gestion_utilisateur.role'}}" textAlign='Left' width=150></e-column>
 
                     </e-columns>
 
