--- a/src/app/pages/dashbord/dashbord.component.html
+++ b/src/app/pages/dashbord/dashbord.component.html
@@ -5,7 +5,7 @@
     <div class="container-fluid">
       <div class="row ">
         <div class="col-sm-6">
-          <h1 class="m-0 text-dark">Tableau de bord </h1>
+          <h1 class="m-0 text-dark">{{'dashbord.title' | translate }}</h1>
         </div>
       </div>
       <hr>
