--- a/src/app/pages/dashbord/instance-stock/instance-stock.component.html
+++ b/src/app/pages/dashbord/instance-stock/instance-stock.component.html
@@ -1,7 +1,7 @@
 <div class="row " *ngIf="rolename==='ADMINISTRATOR'">
   <div class="col-md-11 ml-5  card card-outline card-primary">
     <div class="card-header">
-      <h5 class="card-title">Instance de subvention</h5>
+      <h5 class="card-title">{{ 'dashbord.Instance_subvention' | translate }}</h5>
       <div class="card-tools">
         <button type="button" class="btn btn-tool" data-card-widget="collapse">
           <i class="fas fa-minus"></i>
@@ -12,7 +12,7 @@
     <div class="card-body">
       <div class="row mb-5">
         <div class="col-sm-6">
-          <ejs-accumulationchart [title]="titleV" #pie [legendSettings]="legendSettingsV" [tooltip]="tooltipV"
+          <ejs-accumulationchart title="{{'dashbord.subvention_engrais' | translate}}" #pie [legendSettings]="legendSettingsV" [tooltip]="tooltipV"
                                  (load)='loadValider($event)' [enableSmartLabels]='enableSmartLabels'
                                  [enableAnimation]='enableAnimation' useGroupingSeparator='true'>
             <e-accumulation-series-collection>
@@ -26,7 +26,7 @@
 
         </div>
         <div class="col-sm-6">
-          <ejs-accumulationchart [title]="titleNv" #pie2 [legendSettings]="legendSettingsN" [tooltip]="tooltipNv"
+          <ejs-accumulationchart title="{{ 'dashbord.subvention_herbi' | translate }}" #pie2 [legendSettings]="legendSettingsN" [tooltip]="tooltipNv"
                                  (load)='loadNonValider($event)' [enableSmartLabels]='enableSmartLabels'
                                  [enableAnimation]='enableAnimation'>
             <e-accumulation-series-collection>
